--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
 	</head>
